# MultiThread-TensorRT-LocalHost-Object-Detection-Decode-Api

./: README.md
TensorRTLocalHostApi/: CMakeLists.txt  main.cpp  tensorclient.cpp  tensorclient.h  tensorserver.cpp  tensorserver.h  tensortask.cpp  tensortask.h
TestSocket/: CMakeLists.txt  ConvertImage.cpp  main.cpp  sockettest.cpp  sockettest.h
build-TensorRTLocalHostApi-Desktop-Release/: CMakeCache.txt  Makefile  TensorRTLocalHostApi  TensorRTLocalHostApi.cbp  cmake_install.cmake
build-TensorRTLocalHostApi-Desktop-Release/TensorRTLocalHostApi_autogen/: moc_predefs.h  mocs_compilation.cpp
build-TensorRTLocalHostApi-Desktop-Release/TensorRTLocalHostApi_autogen/EWIEGA46WW/: moc_tensorclient.cpp  moc_tensorserver.cpp  moc_tensortask.cpp
build-TensorRTLocalHostApi-Desktop-Release/barcodeDetectModel/: labels.txt
